--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <div class="space20"></div>
                 <h2>Ujjain to Omkareshwar</h2>
                 <div class="space20"></div>
-                <p>Book our premium car rentals and tempo travelers for a seamless journey from Ujjain to Omkareshwar.
+                <p>Book our premium car rentals and tempo travellers for a seamless journey from Ujjain to Omkareshwar.
                 </p>
                 <div class="space32"></div>
                 <div class="btn-area1">
@@ -384,7 +384,7 @@
               <h2 class="text-anime-style-3">Your Trusted Travel Partner in Ujjain</h2>
               <div class="space16"></div>
               <p data-aos="fade-left" data-aos-duration="900">Gaurav Travels is your go-to solution for comfortable and
-                reliable travel in Ujjain. We specialize in car rentals, tempo travelers, and luxury AC buses for local
+                reliable travel in Ujjain. We specialize in car rentals, tempo travellers, and luxury AC buses for local
                 and outstation trips.</p>
               <div class="space16"></div>
               <p data-aos="fade-left" data-aos-duration="1000">Whether you're planning a pilgrimage to Omkareshwar, a
@@ -420,7 +420,7 @@
               </div>
               <div class="space32"></div>
               <div class="content-area">
-                <a href="">Car Rentals</a>
+                <a href="#car">Car Rentals</a>
                 <div class="space18"></div>
                 <p>Choose from a variety of cars, including sedans, SUVs, and hatchbacks for local and outstation
                   travel.</p>
@@ -437,9 +437,9 @@
               </div>
               <div class="space32"></div>
               <div class="content-area">
-                <a href="apartment-single.html">Tempo Travellers</a>
+                <a href="#tempo">Tempo Travellers</a>
                 <div class="space18"></div>
-                <p>Ideal for group travel, our tempo travelers provide comfort and spacious seating for long journeys.
+                <p>Ideal for group travel, our tempo travellers provide comfort and spacious seating for long journeys.
                 </p>
                 <h3>02</h3>
               </div>
@@ -453,7 +453,7 @@
               </div>
               <div class="space32"></div>
               <div class="content-area">
-                <a href="apartment-single.html">Luxury AC Buses</a>
+                <a href="#bus">Luxury AC Buses</a>
                 <div class="space18"></div>
                 <p>Experience premium travel with our luxury AC buses, perfect for corporate and family trips.</p>
                 <h3>03</h3>
@@ -469,7 +469,7 @@
               </div>
               <div class="space32"></div>
               <div class="content-area">
-                <a href="apartment-single.html">Customized Travel Packages</a>
+                <a href="#Contact">Customized Travel Packages</a>
                 <div class="space18"></div>
                 <p>Plan your trip with our customized packages, including pilgrimages, city tours, and long-distance
                   travel.</p>
@@ -1050,8 +1050,8 @@
               <h5 data-aos="fade-left" data-aos-duration="800">Our Pricing</h5>
               <div class="space20"></div>
               <h2 class="text-anime-style-3">Affordable Travel Packages</h2>
-              <div class="space20"></div>
-              <h3 class="text-anime-style-3">Tampo Travellers (Ujjain - Omkareshwar)</h3>
+              <div class="space20" id="tempo"></div>
+              <h3 class="text-anime-style-3">Tempo Travellers (Ujjain - Omkareshwar)</h3>
             </div>
           </div>
         </div>
@@ -1115,7 +1115,7 @@
               <!-- <h5 data-aos="fade-left" data-aos-duration="800">Our Pricing</h5> -->
               <div class="space20"></div>
               <!-- <h2 class="text-anime-style-3">Affordable Travel Packages</h2> -->
-              <div class="space20"></div>
+              <div class="space20" id="bus"></div>
               <h3 class="text-anime-style-3">Bus (Ujjain - Omkareshwar)</h3>
             </div>
           </div>
@@ -1174,7 +1174,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" id="car">
           <div class="col-lg-5 m-auto">
             <div class="blog-header text-center heading3 space-margin60">
               <!-- <h5 data-aos="fade-left" data-aos-duration="800">Our Pricing</h5> -->
@@ -1365,13 +1365,16 @@
                   </div>
                   <div class="footer-menu2">
                     <ul>
-                      <li><a href="#"> <span><i class="fa-solid fa-location-dot"></i></span> <span>Shop no.4 Hotel
+                      <li><a href="https://maps.app.goo.gl/2HawhiPHWdqLRout6"> <span><i class="fa-solid fa-location-dot"></i></span> <span>Shop no.4 Hotel
                             Arihant opposite Railway station
                             <br>
                             Ujjain ,Madhya Pradesh</span></a></li>
                       <li class="space24"></li>
                       <li><a href="tel:+919685899199"><span><i class="fa-solid fa-phone"></i></span>
                           <span>+91 9685899199</span></a></li>
+                          <li><a href="mailto:animeshj754@gmail.com"><span><i class="fa-solid fa-envelope"></i></span>
+                            <span style=" text-transform: lowercase;;">animeshj754@gmail.com</span></a></li>
+
                     </ul>
                   </div>
                   <div class="footer-social">
