--- a/index.html
+++ b/index.html
@@ -1063,8 +1063,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt="">14 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">14 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">How Luxury Suite Offers the Perfect Blend the Comfort</a> -->
@@ -1080,8 +1080,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt="">17 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">17 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Guest Spotlight: Memorable Moments at Luxury Suite Villa</a> -->
@@ -1098,8 +1098,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt="">21 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">21 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Behind the Scenes: The Art of Creating Luxury Suite Villa</a> -->
@@ -1128,8 +1128,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt="">35-40 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">35-40 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">How Luxury Suite Offers the Perfect Blend the Comfort</a> -->
@@ -1145,8 +1145,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt="">40-45 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">40-45 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Guest Spotlight: Memorable Moments at Luxury Suite Villa</a> -->
@@ -1163,8 +1163,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt="">50-55 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">50-55 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Behind the Scenes: The Art of Creating Luxury Suite Villa</a> -->
@@ -1193,8 +1193,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt=""> 4 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt=""> 4 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">How Luxury Suite Offers the Perfect Blend the Comfort</a> -->
@@ -1210,8 +1210,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt=""> 7 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt=""> 7 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Guest Spotlight: Memorable Moments at Luxury Suite Villa</a> -->
@@ -1228,8 +1228,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#"><img src="assets/img/icons/user.svg" alt="">10 Seater</a> <span> | </span></li>
-                  <li><a href="#"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">10 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Behind the Scenes: The Art of Creating Luxury Suite Villa</a> -->
@@ -1252,7 +1252,7 @@
               <div class="row">
                 <div class="col-lg-6" data-aos="zoom-in-up" data-aos-duration="1000">
                   <div class="footer-contact-box">
-                    <h3>Send Us A Message</h3>
+                    <h3>Contact Us for more Info</h3>
                     <div class="space16"></div>
                     <div class="row">
                       <div class="col-lg-6">
