--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <nav id="navbar-example2" class="navbar">
               <div class="header-elements">
                 <div class="site-logo">
-                  <a href="index.html"><img src="assets/img/logo/logo3.png" alt=""></a>
+                  <a href="index.html"><img src="assets/img/logo/logo3.png" alt="gourav travels logo"></a>
                 </div>
                 <div class="main-menu">
                   <ul>
@@ -85,7 +85,7 @@
                     <form role="search" class="search-form">
                       <input type="search" class="search-field" placeholder="Search …" value="" name="s">
                       <button type="submit" class="search-submit"><img src="assets/img/icons/search-icon1.svg"
-                          alt=""></button>
+                          alt="search icon"></button>
                     </form>
                   </div>
                 </div>
@@ -105,7 +105,7 @@
       <div class="col-12">
         <div class="mobile-header-elements">
           <div class="mobile-logo">
-            <a href="index.html"><img src="assets/img/logo/logo3.png" alt=""></a>
+            <a href="index.html"><img src="assets/img/logo/logo3.png" alt="Gourav travels logo"></a>
           </div>
           <div class="mobile-nav-icon dots-menu">
             <i class="fa-solid fa-bars"></i>
@@ -118,7 +118,7 @@
   <div class="mobile-sidebar mobile-sidebar3">
     <div class="logosicon-area">
       <div class="logos">
-        <img src="assets/img/logo/logo3.png" alt="">
+        <img src="assets/img/logo/logo3.png" alt="Gourav travels logo">
       </div>
       <div class="menu-close">
         <i class="fa-solid fa-xmark"></i>
@@ -195,17 +195,17 @@
   <div class="header-carousel-area3 owl-carousel">
     <div class="main-hero-area">
       <div class="img1">
-        <img src="assets/img/all-images/hero/hero-img6.png" alt="">
+        <img src="assets/img/all-images/hero/hero-img6.png" alt="Omkareshwar Mahakaleshwar collag">
       </div>
       <div class="bg-elements">
-        <img src="assets/img/elements/elements7.png" alt="" class="elements2">
+        <img src="assets/img/elements/elements7.png" alt="graphics" class="elements2">
       </div>
       <div class="container">
         <div class="row">
           <div class="col-lg-5 col-md-9">
             <div class="header-content-area header-heading">
               <div class="elements">
-                <img src="assets/img/elements/elements3.png" alt="">
+                <img src="assets/img/elements/elements3.png" alt="graphics">
               </div>
               <div class="header-heading2">
                 <a href="https://maps.app.goo.gl/xXGWZVStWtFFfPvm8">
@@ -233,7 +233,7 @@
             <div class="auhtor-box">
               <div class="others-box">
                 <div class="img3">
-                  <img src="assets/img/all-images/others/others-img1.png" alt="">
+                  <img src="assets/img/all-images/others/others-img1.png" alt="Mahakaleshwar image mahakal ujjain">
                 </div>
                 <div class="text">
                   <h3>Travel With Us</h3>
@@ -249,17 +249,17 @@
 
     <div class="main-hero-area">
       <div class="img1">
-        <img src="assets/img/all-images/hero/hero-img5.png" alt="">
+        <img src="assets/img/all-images/hero/hero-img5.png" alt="tempo travellers">
       </div>
       <div class="bg-elements">
-        <img src="assets/img/elements/elements7.png" alt="" class="elements2">
+        <img src="assets/img/elements/elements7.png" alt="graphics" class="elements2">
       </div>
       <div class="container">
         <div class="row">
           <div class="col-lg-5 col-md-9">
             <div class="header-content-area header-heading">
               <div class="elements">
-                <img src="assets/img/elements/elements3.png" alt="">
+                <img src="assets/img/elements/elements3.png" alt="graphics">
               </div>
               <div class="header-heading2">
                 <a href="https://maps.app.goo.gl/xXGWZVStWtFFfPvm8">
@@ -287,7 +287,7 @@
             <div class="auhtor-box">
               <div class="others-box">
                 <div class="img3">
-                  <img src="assets/img/all-images/others/others-img1.png" alt="">
+                  <img src="assets/img/all-images/others/others-img1.png" alt="Mahakaleshwar  mahakal ujjain">
                 </div>
                 <div class="text">
                   <h3>Travel With Us</h3>
@@ -303,17 +303,17 @@
 
     <div class="main-hero-area">
       <div class="img1">
-        <img src="assets/img/all-images/hero/hero-img1.png" alt="">
+        <img src="assets/img/all-images/hero/hero-img1.png" alt="Bus gourav travals">
       </div>
       <div class="bg-elements">
-        <img src="assets/img/elements/elements7.png" alt="" class="elements2">
+        <img src="assets/img/elements/elements7.png" alt="graphics" class="elements2">
       </div>
       <div class="container">
         <div class="row">
           <div class="col-lg-5 col-md-9">
             <div class="header-content-area header-heading">
               <div class="elements">
-                <img src="assets/img/elements/elements3.png" alt="">
+                <img src="assets/img/elements/elements3.png" alt="graphics">
               </div>
               <div class="header-heading2">
                 <a href="https://maps.app.goo.gl/xXGWZVStWtFFfPvm8">
@@ -341,7 +341,7 @@
             <div class="auhtor-box">
               <div class="others-box">
                 <div class="img3">
-                  <img src="assets/img/all-images/others/others-img1.png" alt="">
+                  <img src="assets/img/all-images/others/others-img1.png" alt="mahakal Mahakaleshwar ujjain">
                 </div>
                 <div class="text">
                   <h3>Travel With Us</h3>
@@ -366,13 +366,13 @@
           <div class="col-lg-6">
             <div class="property-images-area">
               <div class="img1 reveal image-anime">
-                <img src="assets/img/all-images/property/property-img4.png" alt="">
+                <img src="assets/img/all-images/property/property-img4.png" alt="gourav travals ujjain bus">
               </div>
               <div class="img2 reveal image-anime">
-                <img src="assets/img/all-images/property/property-img5.png" alt="">
+                <img src="assets/img/all-images/property/property-img5.png" alt="gourav travals office ">
               </div>
               <div class="elements reveal image-anime">
-                <img src="assets/img/elements/elements9.png" alt="">
+                <img src="assets/img/elements/elements9.png" alt="graphics">
               </div>
             </div>
           </div>
@@ -416,7 +416,7 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in-up" data-aos-duration="800">
             <div class="amenities-boxarea">
               <div class="img1">
-                <img src="assets/img/all-images/service/service-img4.png" alt="">
+                <img src="assets/img/all-images/service/service-img4.png" alt="toyata crysta gourav travals">
               </div>
               <div class="space32"></div>
               <div class="content-area">
@@ -433,7 +433,7 @@
             <div class="space40 d-lg-block d-none"></div>
             <div class="amenities-boxarea">
               <div class="img1">
-                <img src="assets/img/all-images/service/service-img5.png" alt="">
+                <img src="assets/img/all-images/service/service-img5.png" alt="20 Seater tempo travaller">
               </div>
               <div class="space32"></div>
               <div class="content-area">
@@ -449,7 +449,7 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in-up" data-aos-duration="1100">
             <div class="amenities-boxarea">
               <div class="img1">
-                <img src="assets/img/all-images/service/service-img7.png" alt="">
+                <img src="assets/img/all-images/service/service-img7.png" alt="bus ">
               </div>
               <div class="space32"></div>
               <div class="content-area">
@@ -498,20 +498,20 @@
           <div class="col-lg-6">
             <div class="about-slider-area owl-carousel">
               <div class="img1 reveal image-anime">
-                <img src="assets/img/all-images/about/img1.png" alt="">
+                <img src="assets/img/all-images/about/img1.png" alt="tampo traveller gaurav travels">
               </div>
               <div class="img1 reveal image-anime">
-                <img src="assets/img/all-images/about/img2.png" alt="">
+                <img src="assets/img/all-images/about/img2.png" alt="bus gaurav travels">
               </div>
               <div class="img1 reveal image-anime">
-                <img src="assets/img/all-images/about/img3.png" alt="">
+                <img src="assets/img/all-images/about/img3.png" alt="bus gaurav travels">
               </div>
               <div class="img1 reveal image-anime">
-                <img src="assets/img/all-images/about/img4.png" alt="">
+                <img src="assets/img/all-images/about/img4.png" alt="traveller interior">
               </div>
 
               <div class="img1 reveal image-anime">
-                <img src="assets/img/all-images/about/img5.png" alt="">
+                <img src="assets/img/all-images/about/img5.png" alt="tempo travels ">
               </div>
               <!-- <div class="img1 reveal image-anime">
                 <img src="assets/img/all-images/about/about-img3.png" alt="">
@@ -540,7 +540,7 @@
               <div class="col-lg-6 col-md-6">
                 <div class="about-video-area">
                   <div class="img1 image-anime reveal">
-                    <a href="" class="popup-youtube"><img src="assets/img/all-images/about/about-img5.png" alt=""></a>
+                    <a href="" class="popup-youtube"><img src="assets/img/all-images/about/about-img5.png" alt="tavera gaurav travels"></a>
                   </div>
                   <!-- <div class="play-btn">
                     <a href="https://www.youtube.com/watch?v=Y8XpQpW5OVY" class="popup-youtube"><i
@@ -572,7 +572,7 @@
                 </div>
               </div>
               <div class="elements3">
-                <img src="assets/img/elements/elements3.png" alt="">
+                <img src="assets/img/elements/elements3.png" alt=""graphics>
               </div>
             </div>
           </div>
@@ -635,7 +635,7 @@
             <div class="space86"></div>
             <div class="testimonial-video-area" data-aos="zoom-in-up" data-aos-duration="1000">
               <div class="img1">
-                <img src="assets/img/all-images/testimonial/testimonial-img3.png" alt="">
+                <img src="assets/img/all-images/testimonial/testimonial-img3.png" alt="happy customers gourav travels">
               </div>
               <div class="icons">
                 <!-- <a href="https://www.youtube.com/watch?v=Y8XpQpW5OVY" class="popup-youtube"><i
@@ -651,7 +651,7 @@
                   <div class="verical-boxarea">
                     <div class="images-area">
                       <div class="img1">
-                        <img src="assets/img/all-images/testimonial/testimonial-img5.png" alt="">
+                        <img src="assets/img/all-images/testimonial/testimonial-img5.png" alt="user of gourav travels">
                       </div>
                       <div class="text">
                         <a href="#">Harsh Goyal</a>
@@ -659,7 +659,7 @@
                       </div>
                     </div>
                     <div class="quito">
-                      <img src="assets/img/icons/quoto-icon2.svg" alt="">
+                      <img src="assets/img/icons/quoto-icon2.svg" alt="quoto icon">
                     </div>
                   </div>
                   <div class="space24"></div>
@@ -711,7 +711,7 @@
                   <div class="verical-boxarea">
                     <div class="images-area">
                       <div class="img1">
-                        <img src="assets/img/all-images/testimonial/testimonial-img6.png" alt="">
+                        <img src="assets/img/all-images/testimonial/testimonial-img6.png" alt="user icon">
                       </div>
                       <div class="text">
                         <a href="#">Atharva Kothari</a>
@@ -741,7 +741,7 @@
                   <div class="verical-boxarea">
                     <div class="images-area">
                       <div class="img1">
-                        <img src="assets/img/all-images/testimonial/testimonial-img7.png" alt="">
+                        <img src="assets/img/all-images/testimonial/testimonial-img7.png" alt="user icon">
                       </div>
                       <div class="text">
                         <a href="#">Suraj Thorve</a>
@@ -771,7 +771,7 @@
                   <div class="verical-boxarea">
                     <div class="images-area">
                       <div class="img1">
-                        <img src="assets/img/all-images/testimonial/testimonial-img4.png" alt="">
+                        <img src="assets/img/all-images/testimonial/testimonial-img4.png" alt="user icon">
                       </div>
                       <div class="text">
                         <a href="#">Naveen Dhiman</a>
@@ -1059,7 +1059,7 @@
           <div class="col-lg-4 col-md-6" data-aos="zoom-in-up" data-aos-duration="800">
             <div class="blog-boxarea">
               <div class="img1 image-anime">
-                <img src="assets/img/all-images/blog/blog-img1.png" alt="">
+                <img src="assets/img/all-images/blog/blog-img1.png" alt="14 Seater tempo traveller">
               </div>
               <div class="content-area">
                 <ul>
@@ -1343,7 +1343,7 @@
               <div class="footer-bottom-area">
                 <div class="footer-menu-area">
                   <div class="footer-logo">
-                    <a href="index.html"><img src="assets/img/logo/logo3.png" alt=""></a>
+                    <a href="index.html"><img src="assets/img/logo/logo3.png" alt="Gourav travels logo"></a>
                   </div>
                   <div class="footer-menu">
                     <ul>
