--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
                           9685899199</span></a></li>
                   </ul>
                 </div>
-                <div class="btn-area-author">
-                  <!-- <div class="search-icon header__search header-search-btn">
+                <!-- <div class="btn-area-author">
+                   <div class="search-icon header__search header-search-btn">
                   <a href="#"><img src="assets/img/icons/search-icon1.svg" alt=""> <span></span></a>
-                </div> -->
+                </div>
                   <ul>
                     <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                     <li><a href="https://maps.app.goo.gl/2HawhiPHWdqLRout6"><i class="fa-brands fa-google-plus-g"></i></a></li>
-                    <!-- <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li> -->
+                     <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li> 
                     <li><a href="#" class="m-0"><i class="fa-brands fa-youtube"></i></a></li>
                   </ul>
-                </div>
+                </div> -->
 
                 <div class="header-search-form-wrapper">
                   <div class="tx-search-close tx-close"><i class="fa-solid fa-xmark"></i></div>
@@ -172,7 +172,7 @@
               </div>
 
             </div>
-            <div class="single-footer">
+            <!-- <div class="single-footer">
               <h3>Social Links</h3>
 
               <div class="social-links-mobile-menu">
@@ -183,7 +183,7 @@
                   <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -540,7 +540,8 @@
               <div class="col-lg-6 col-md-6">
                 <div class="about-video-area">
                   <div class="img1 image-anime reveal">
-                    <a href="" class="popup-youtube"><img src="assets/img/all-images/about/about-img5.png" alt="tavera gaurav travels"></a>
+                    <a href="" class="popup-youtube"><img src="assets/img/all-images/about/about-img5.png"
+                        alt="tavera gaurav travels"></a>
                   </div>
                   <!-- <div class="play-btn">
                     <a href="https://www.youtube.com/watch?v=Y8XpQpW5OVY" class="popup-youtube"><i
@@ -572,7 +573,7 @@
                 </div>
               </div>
               <div class="elements3">
-                <img src="assets/img/elements/elements3.png" alt=""graphics>
+                <img src="assets/img/elements/elements3.png" alt="" graphics>
               </div>
             </div>
           </div>
@@ -1128,7 +1129,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">35-40 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">35-40 Seater</a> <span> | </span>
+                  </li>
                   <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
@@ -1145,7 +1147,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">40-45 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">40-45 Seater</a> <span> | </span>
+                  </li>
                   <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
@@ -1163,7 +1166,8 @@
               </div>
               <div class="content-area">
                 <ul>
-                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">50-55 Seater</a> <span> | </span></li>
+                  <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">50-55 Seater</a> <span> | </span>
+                  </li>
                   <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
@@ -1251,36 +1255,38 @@
             <div class="footer-instagram-area">
               <div class="row">
                 <div class="col-lg-6" data-aos="zoom-in-up" data-aos-duration="1000">
-                  <div class="footer-contact-box">
-                    <h3>Contact Us for more Info</h3>
-                    <div class="space16"></div>
-                    <div class="row">
-                      <div class="col-lg-6">
-                        <div class="space16"></div>
-                        <div class="input-area">
-                          <input type="text" placeholder="Your Name*">
+                  <form method="post" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSf6PXpvTKMaG1rAT1GiDII1VtrstwcyibOiscBIFphwIK8QhQ/formResponse">
+                    <div class="footer-contact-box">
+                      <h3>Contact Us for more Info</h3>
+                      <div class="space16"></div>
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="space16"></div>
+                          <div class="input-area">
+                            <input  type="text" placeholder="Your Name" required name="entry.1792914598">
+                          </div>
                         </div>
-                      </div>
-                      <div class="col-lg-6">
-                        <div class="space16"></div>
-                        <div class="input-area">
-                          <input type="number" placeholder="Mobile Number*">
+                        <div class="col-lg-6">
+                          <div class="space16"></div>
+                          <div class="input-area">
+                            <input type="number" placeholder="Mobile Number" required name="entry.1600948147">
+                          </div>
                         </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <div class="space16"></div>
-                        <div class="input-area">
-                          <textarea name="#" id="#" placeholder="Your Message*"></textarea>
+                        <div class="col-lg-12">
+                          <div class="space16"></div>
+                          <div class="input-area">
+                            <textarea name="entry.1752123432" id="#" placeholder="Your Message*" required></textarea>
+                          </div>  
                         </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <div class="space32"></div>
-                        <div class="input-area text-end">
-                          <button type="submit" class="header-btn4">Send Message</button>
+                        <div class="col-lg-12">
+                          <div class="space32"></div>
+                          <div class="input-area text-end">
+                            <button type="submit" class="header-btn4">Send Message</button>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </form>
                 </div>
                 <div class="col-lg-6">
                   <div class="instagram-images">
@@ -1290,9 +1296,9 @@
                           <div class="img1">
                             <img src="assets/img/all-images/others/others-img7.png" alt="">
                           </div>
-                          <div class="icons">
+                          <!-- <div class="icons">
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                       <div class="col-lg-7 col-md-6" data-aos="zoom-in-up" data-aos-duration="1000">
@@ -1300,9 +1306,9 @@
                           <div class="img1">
                             <img src="assets/img/all-images/others/others-img8.png" alt="">
                           </div>
-                          <div class="icons">
+                          <!-- <div class="icons">
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
 
@@ -1311,9 +1317,9 @@
                           <div class="img1">
                             <img src="assets/img/all-images/others/others-img9.png" alt="">
                           </div>
-                          <div class="icons">
+                          <!-- <div class="icons">
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
 
@@ -1322,9 +1328,9 @@
                           <div class="img1">
                             <img src="assets/img/all-images/others/others-img10.png" alt="">
                           </div>
-                          <div class="icons">
+                          <!-- <div class="icons">
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                     </div>
@@ -1365,26 +1371,27 @@
                   </div>
                   <div class="footer-menu2">
                     <ul>
-                      <li><a href="https://maps.app.goo.gl/2HawhiPHWdqLRout6"> <span><i class="fa-solid fa-location-dot"></i></span> <span>Shop no.4 Hotel
+                      <li><a href="https://maps.app.goo.gl/2HawhiPHWdqLRout6"> <span><i
+                              class="fa-solid fa-location-dot"></i></span> <span>Shop no.4 Hotel
                             Arihant opposite Railway station
                             <br>
                             Ujjain ,Madhya Pradesh</span></a></li>
                       <li class="space24"></li>
                       <li><a href="tel:+919685899199"><span><i class="fa-solid fa-phone"></i></span>
                           <span>+91 9685899199</span></a></li>
-                          <li><a href="mailto:animeshj754@gmail.com"><span><i class="fa-solid fa-envelope"></i></span>
-                            <span style=" text-transform: lowercase;;">animeshj754@gmail.com</span></a></li>
+                      <li><a href="mailto:animeshj754@gmail.com"><span><i class="fa-solid fa-envelope"></i></span>
+                          <span style=" text-transform: lowercase;;">animeshj754@gmail.com</span></a></li>
 
                     </ul>
                   </div>
-                  <div class="footer-social">
+                  <!-- <div class="footer-social">
                     <ul>
                       <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                       <li><a href="https://maps.app.goo.gl/2HawhiPHWdqLRout6"><i class="fa-brands fa-google-plus-g"></i></a></li>
-                      <!-- <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li> -->
+                     <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                       <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row">
                   <div class="col-lg-12">
