--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0; url=https://gauravtravels.in">
+
   <title>Gaurav Travels</title>
 
   <!--=====FAB ICON=======-->
