--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
               <div class="content-area">
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">14 Seater</a> <span> | </span></li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">How Luxury Suite Offers the Perfect Blend the Comfort</a> -->
@@ -1083,7 +1083,7 @@
               <div class="content-area">
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">17 Seater</a> <span> | </span></li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Guest Spotlight: Memorable Moments at Luxury Suite Villa</a> -->
@@ -1101,7 +1101,7 @@
               <div class="content-area">
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">21 Seater</a> <span> | </span></li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Behind the Scenes: The Art of Creating Luxury Suite Villa</a> -->
@@ -1132,7 +1132,7 @@
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">35-40 Seater</a> <span> | </span>
                   </li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">How Luxury Suite Offers the Perfect Blend the Comfort</a> -->
@@ -1150,7 +1150,7 @@
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">40-45 Seater</a> <span> | </span>
                   </li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Guest Spotlight: Memorable Moments at Luxury Suite Villa</a> -->
@@ -1169,7 +1169,7 @@
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">50-55 Seater</a> <span> | </span>
                   </li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Behind the Scenes: The Art of Creating Luxury Suite Villa</a> -->
@@ -1199,7 +1199,7 @@
               <div class="content-area">
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt=""> 4 Seater</a> <span> | </span></li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">How Luxury Suite Offers the Perfect Blend the Comfort</a> -->
@@ -1216,7 +1216,7 @@
               <div class="content-area">
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt=""> 7 Seater</a> <span> | </span></li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Guest Spotlight: Memorable Moments at Luxury Suite Villa</a> -->
@@ -1234,7 +1234,7 @@
               <div class="content-area">
                 <ul>
                   <li><a href="#Contact"><img src="assets/img/icons/user.svg" alt="">10 Seater</a> <span> | </span></li>
-                  <li><a href="#Contact"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
+                  <li><a href="tel:+919685899199"><img src="assets/img/icons/rupee.min.svg" alt="">Call for Price</a></li>
                 </ul>
                 <div class="space20"></div>
                 <!-- <a href="blog-single.html">Behind the Scenes: The Art of Creating Luxury Suite Villa</a> -->
